create and finish task api endpoints
