# internal/app/http/dto/task.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateTaskRequestDTO struct {
+	Summary          string `json:"summary,omitempty"`
+	AssignedToUserID string `json:"assigned_to_user_id,omitempty"`
+}
